_styles/home.css
/* ... */
/********************
* Parental Controls *
********************/

#parental-controls {
    display: flex;
    justify-content: center;
    max-width: 100%;
    padding: 48px 0;
    position: relative;
}

#parental-controls .app-display__description h2,
#parental-controls .app-display__description p {
    text-align: left;
}

#parental-controls .app-display__description p {
    margin-left: 24px;
}

#parental-controls .app-display__description h2 img {
    vertical-align: middle;
    padding-bottom: 8px;
}

#parental-controls .app-display__description svg {
    display: inline-block;
    float: left;
    margin: 4px 6px 4px 0;
}

#parental-controls .app-display__description svg,
#parental-controls .app-display__description svg * {
    color: #000 !important;
    fill: #000 !important;
}

/************
* Shortcuts *
************/

#shortcuts {
    display: flex;
    justify-content: center;
    padding: 64px 0;
    width: 100%;
}

#shortcuts p {
    margin-bottom: 8vw; /* For better balance */
}

#shortcuts .app-display__image {
    padding: 0 32px 32px;
}

@media (min-width: 1000px) {
    #shortcuts .app-display__image {
        order: 0;
    }
}

/**********
* Privacy *
**********/

#privacy {
    background-color: #273445;
    color: white;
    padding: 128px 1em;
}

#privacy a {
    color: #8cd5ff;
}

#privacy h3 svg {
    fill: white;
    height: 1em;
    margin-right: 0.25em;
    transform: scale(1.5);
    vertical-align: bottom;
}

#privacy h3 svg * {
    fill: inherit;
}

